# DigitalLibrary

./: DigitalLibrary.layout  README.md
Client/: CMakeLists.txt  CMakeLists.txt~  DigitalLibrary.cbp  DigitalLibrary.depend  DigitalLibrary.layout  Task~
Client/digiLibClient/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  digiLibClient  digiLibClient.cbp  digiLibClient.depend  digiLibClient.layout  main.cpp  main.cpp~  manageDigiLibBook.cpp~  manageDigiLibBook.h~
Client/digiLibClient/include/: digiLibBook.h  digiLibBook.h~  manageDigiLibBook.h  manageDigiLibBook.h~  manage_user.h  user.h  user.h~
Client/digiLibClient/src/: digiLibBook.cpp  main.cpp  main.cpp~  manageDigiLibBook.cpp  manageDigiLibBook.cpp~  manage_user.cpp  user.cpp  user.cpp~
Client/include/: ManageDigiLibBooks.h  digiLibUser.h
Client/src/: ManageDigiLibBooks.cpp  digiLibUser.cpp
Server/: CMakeCache.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
Server/digiLibServer/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  digiLibServer  digiLibServer.cbp  digiLibServer.depend  digiLibServer.layout
Server/digiLibServer/include/: digiLibBook.h  digiLibData.h  digiLibServer.h  manage_User.h
Server/digiLibServer/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  digiLibBook.cpp  digiLibData.cpp  digiLibData.cpp~  digiLibServer.cpp  digiLibServer.cpp~  manage_User.cpp
include/: digiLibBook.h  digiLibClient.h  digiLibUser.h
src/: ManageDigiLibBooks.cpp  digiLibBook.cpp  digiLibClient.cpp  digiLibUser.cpp
